--- a/src/Components/Pagination/Pagination.module.css
+++ b/src/Components/Pagination/Pagination.module.css
@@ -1,4 +1,3 @@
-/* styles.css */
 .tableContainer {
     max-width: 1280px;
     margin: 0 auto;
@@ -21,10 +20,10 @@
   .tableHeader {
     background-color: #29a95e;
     color: #fff;
-    padding: 2rem;
+    padding: 0.5rem 1rem;
   }
   
-  .tableRow {
+.tableRow {
     border: 1px solid #e2e8f0;
   }
   
@@ -56,13 +55,6 @@
     border-radius: 0.125rem;
     cursor: pointer;
   }
-  
-  .paginationButton:hover {
-    background-color: #3c9b63;
-    border-color: #3c9b63;
-  }
-  
-  
   
   .paginationCurrent {
     font-size: 1.125rem;
